# dgp-remesh

./: .gitignore  CMakeLists.txt
src/: cmdarghelp.hpp  dgp-remesh.cpp  trimesh.cpp  trimesh.hpp  types.cpp  types.hpp  vertex.cpp  vertex.hpp
